# flask_admin

./: Makefile  config.py  mypy.ini  pyproject.toml  setup.cfg
admin/: app.py
admin/views/: individual.py
db/: database.py  settings.py
db/migrations/: env.py
db/migrations/versions/: 58fba8e71f19_.py
db/models/: language.py
